--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     });
 
     function shareScore() {
-      const text = isDaily ? `I just scored ${score} points on WordGraft's daily word! Can you do better? https://TheRealNinjyata.github.io/WordGraft/` : `I just scored ${score} points on WordGraft! Can you do better? https://TheRealNinjyata.github.io/WordGraft/`;
+      const text = isDaily ? `I just scored ${score} points on WordGraft's daily word!! Can you do better? https://TheRealNinjyata.github.io/WordGraft/` : `I just scored ${score} points on WordGraft! Can you do better? https://TheRealNinjyata.github.io/WordGraft/`;
       if (navigator.share) {
         navigator.share({ text });
       } else {
